src/MiniJavaParser.java
// $ANTLR 3.4 D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g 2024-05-14 15:41:51

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class MiniJavaParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ArrayAssignment", "Assignment", "Boolean", "ClassDeclaration", "DOUBLE", "DoubleNum", "Factor", "Flase", "GeneralArithExpr", "Goal", "ID", "INT", "Identifier", "If", "Int", "IntArray", "IntNum", "ML_COMMENT", "MainClass", "MethodDeclaration", "NNew", "New", "Not", "Pracet", "Print", "ProgramEntry", "SL_COMMENT", "Start", "Stmt", "Strings", "Term", "This", "True", "VarDeclaration", "WS", "While", "'!'", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "';'", "'<'", "'<='", "'='", "'>'", "'>='", "'String'", "'System.out.println'", "'['", "']'", "'boolean'", "'class'", "'else'", "'extends'", "'false'", "'if'", "'int'", "'main'", "'new'", "'public'", "'return'", "'static'", "'this'", "'true'", "'void'", "'while'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int ArrayAssignment=4;
    public static final int Assignment=5;
    public static final int Boolean=6;
    public static final int ClassDeclaration=7;
    public static final int DOUBLE=8;
    public static final int DoubleNum=9;
    public static final int Factor=10;
    public static final int Flase=11;
    public static final int GeneralArithExpr=12;
    public static final int Goal=13;
    public static final int ID=14;
    public static final int INT=15;
    public static final int Identifier=16;
    public static final int If=17;
    public static final int Int=18;
    public static final int IntArray=19;
    public static final int IntNum=20;
    public static final int ML_COMMENT=21;
    public static final int MainClass=22;
    public static final int MethodDeclaration=23;
    public static final int NNew=24;
    public static final int New=25;
    public static final int Not=26;
    public static final int Pracet=27;
    public static final int Print=28;
    public static final int ProgramEntry=29;
    public static final int SL_COMMENT=30;
    public static final int Start=31;
    public static final int Stmt=32;
    public static final int Strings=33;
    public static final int Term=34;
    public static final int This=35;
    public static final int True=36;
    public static final int VarDeclaration=37;
    public static final int WS=38;
    public static final int While=39;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public MiniJavaParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public MiniJavaParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return MiniJavaParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g"; }


    	String s="";


    public static class programEntry_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "programEntry"
    // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:40:1: programEntry : ( goal ) -> ^( Start goal ) ;
    public final MiniJavaParser.programEntry_return programEntry() throws RecognitionException {
        MiniJavaParser.programEntry_return retval = new MiniJavaParser.programEntry_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        MiniJavaParser.goal_return goal1 =null;


        RewriteRuleSubtreeStream stream_goal=new RewriteRuleSubtreeStream(adaptor,"rule goal");
        try {
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:40:13: ( ( goal ) -> ^( Start goal ) )
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:40:15: ( goal )
            {
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:40:15: ( goal )
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:40:16: goal
            {
            pushFollow(FOLLOW_goal_in_programEntry115);
            goal1=goal();

            state._fsp--;

            stream_goal.add(goal1.getTree());

            }


            // AST REWRITE
            // elements: goal
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 40:22: -> ^( Start goal )
            {
                // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:40:24: ^( Start goal )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(Start, "Start")
                , root_1);

                adaptor.addChild(root_1, stream_goal.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (MismatchedTokenException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }
        catch (NoViableAltException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }
        catch (RecognitionException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }

        finally {
        	// do for sure before leaving
             s = s + "Exit..."+"\n"; 
        }
        return retval;
    }
    // $ANTLR end "programEntry"


    public static class goal_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "goal"
    // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:50:1: goal : ( ( classes )* ) -> ^( Goal ( classes )* ) ;
    public final MiniJavaParser.goal_return goal() throws RecognitionException {
        MiniJavaParser.goal_return retval = new MiniJavaParser.goal_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        MiniJavaParser.classes_return classes2 =null;


        RewriteRuleSubtreeStream stream_classes=new RewriteRuleSubtreeStream(adaptor,"rule classes");
        try {
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:50:13: ( ( ( classes )* ) -> ^( Goal ( classes )* ) )
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:50:17: ( ( classes )* )
            {
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:50:17: ( ( classes )* )
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:50:18: ( classes )*
            {
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:50:18: ( classes )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==61) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:50:18: classes
            	    {
            	    pushFollow(FOLLOW_classes_in_goal165);
            	    classes2=classes();

            	    state._fsp--;

            	    stream_classes.add(classes2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }


            // AST REWRITE
            // elements: classes
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 50:28: -> ^( Goal ( classes )* )
            {
                // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:50:30: ^( Goal ( classes )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(Goal, "Goal")
                , root_1);

                // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:50:37: ( classes )*
                while ( stream_classes.hasNext() ) {
                    adaptor.addChild(root_1, stream_classes.nextTree());

                }
                stream_classes.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (MismatchedTokenException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }
        catch (NoViableAltException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }
        catch (RecognitionException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "goal"


    public static class classes_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "classes"
    // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:56:1: classes : ( ( classDeclaration | mainClass ) ^) ;
    public final MiniJavaParser.classes_return classes() throws RecognitionException {
        MiniJavaParser.classes_return retval = new MiniJavaParser.classes_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        MiniJavaParser.classDeclaration_return classDeclaration3 =null;

        MiniJavaParser.mainClass_return mainClass4 =null;



        try {
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:56:9: ( ( ( classDeclaration | mainClass ) ^) )
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:56:11: ( ( classDeclaration | mainClass ) ^)
            {
            root_0 = (Object)adaptor.nil();


            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:56:11: ( ( classDeclaration | mainClass ) ^)
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:56:12: ( classDeclaration | mainClass ) ^
            {
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:56:12: ( classDeclaration | mainClass )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==61) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==Identifier) ) {
                    int LA2_2 = input.LA(3);

                    if ( (LA2_2==76) ) {
                        int LA2_3 = input.LA(4);

                        if ( (LA2_3==69) ) {
                            int LA2_5 = input.LA(5);

                            if ( (LA2_5==71) ) {
                                alt2=2;
                            }
                            else if ( (LA2_5==Identifier||LA2_5==60||LA2_5==66) ) {
                                alt2=1;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 2, 5, input);

                                throw nvae;

                            }
                        }
                        else if ( (LA2_3==Identifier||LA2_3==57||LA2_3==60||(LA2_3 >= 65 && LA2_3 <= 66)||(LA2_3 >= 75 && LA2_3 <= 76)||LA2_3==78) ) {
                            alt2=1;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 2, 3, input);

                            throw nvae;

                        }
                    }
                    else if ( (LA2_2==63) ) {
                        alt2=1;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 2, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:56:13: classDeclaration
                    {
                    pushFollow(FOLLOW_classDeclaration_in_classes201);
                    classDeclaration3=classDeclaration();

                    state._fsp--;

                    adaptor.addChild(root_0, classDeclaration3.getTree());

                    }
                    break;
                case 2 :
                    // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:56:31: mainClass
                    {
                    pushFollow(FOLLOW_mainClass_in_classes204);
                    mainClass4=mainClass();

                    state._fsp--;

                    adaptor.addChild(root_0, mainClass4.getTree());

                    }
                    break;

            }


            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (MismatchedTokenException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }
        catch (NoViableAltException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }
        catch (RecognitionException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "classes"


    public static class mainClass_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "mainClass"
    // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:64:1: mainClass : ( 'class' Identifier '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' Identifier ')' '{' ( declirationsORStatement )* '}' '}' ) -> ^( MainClass 'class' Identifier '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' Identifier ')' '{' ( declirationsORStatement )* '}' '}' ) ;
    public final MiniJavaParser.mainClass_return mainClass() throws RecognitionException {
        MiniJavaParser.mainClass_return retval = new MiniJavaParser.mainClass_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal5=null;
        Token Identifier6=null;
        Token char_literal7=null;
        Token string_literal8=null;
        Token string_literal9=null;
        Token string_literal10=null;
        Token string_literal11=null;
        Token char_literal12=null;
        Token string_literal13=null;
        Token char_literal14=null;
        Token char_literal15=null;
        Token Identifier16=null;
        Token char_literal17=null;
        Token char_literal18=null;
        Token char_literal20=null;
        Token char_literal21=null;
        MiniJavaParser.declirationsORStatement_return declirationsORStatement19 =null;


        Object string_literal5_tree=null;
        Object Identifier6_tree=null;
        Object char_literal7_tree=null;
        Object string_literal8_tree=null;
        Object string_literal9_tree=null;
        Object string_literal10_tree=null;
        Object string_literal11_tree=null;
        Object char_literal12_tree=null;
        Object string_literal13_tree=null;
        Object char_literal14_tree=null;
        Object char_literal15_tree=null;
        Object Identifier16_tree=null;
        Object char_literal17_tree=null;
        Object char_literal18_tree=null;
        Object char_literal20_tree=null;
        Object char_literal21_tree=null;
        RewriteRuleTokenStream stream_78=new RewriteRuleTokenStream(adaptor,"token 78");
        RewriteRuleTokenStream stream_56=new RewriteRuleTokenStream(adaptor,"token 56");
        RewriteRuleTokenStream stream_67=new RewriteRuleTokenStream(adaptor,"token 67");
        RewriteRuleTokenStream stream_69=new RewriteRuleTokenStream(adaptor,"token 69");
        RewriteRuleTokenStream stream_58=new RewriteRuleTokenStream(adaptor,"token 58");
        RewriteRuleTokenStream stream_59=new RewriteRuleTokenStream(adaptor,"token 59");
        RewriteRuleTokenStream stream_Identifier=new RewriteRuleTokenStream(adaptor,"token Identifier");
        RewriteRuleTokenStream stream_71=new RewriteRuleTokenStream(adaptor,"token 71");
        RewriteRuleTokenStream stream_61=new RewriteRuleTokenStream(adaptor,"token 61");
        RewriteRuleTokenStream stream_74=new RewriteRuleTokenStream(adaptor,"token 74");
        RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
        RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
        RewriteRuleTokenStream stream_76=new RewriteRuleTokenStream(adaptor,"token 76");
        RewriteRuleSubtreeStream stream_declirationsORStatement=new RewriteRuleSubtreeStream(adaptor,"rule declirationsORStatement");
        try {
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:64:13: ( ( 'class' Identifier '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' Identifier ')' '{' ( declirationsORStatement )* '}' '}' ) -> ^( MainClass 'class' Identifier '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' Identifier ')' '{' ( declirationsORStatement )* '}' '}' ) )
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:65:3: ( 'class' Identifier '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' Identifier ')' '{' ( declirationsORStatement )* '}' '}' )
            {
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:65:3: ( 'class' Identifier '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' Identifier ')' '{' ( declirationsORStatement )* '}' '}' )
            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:65:4: 'class' Identifier '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' Identifier ')' '{' ( declirationsORStatement )* '}' '}'
            {
            string_literal5=(Token)match(input,61,FOLLOW_61_in_mainClass241);  
            stream_61.add(string_literal5);


            Identifier6=(Token)match(input,Identifier,FOLLOW_Identifier_in_mainClass243);  
            stream_Identifier.add(Identifier6);


            char_literal7=(Token)match(input,76,FOLLOW_76_in_mainClass245);  
            stream_76.add(char_literal7);


            string_literal8=(Token)match(input,69,FOLLOW_69_in_mainClass247);  
            stream_69.add(string_literal8);


            string_literal9=(Token)match(input,71,FOLLOW_71_in_mainClass249);  
            stream_71.add(string_literal9);


            string_literal10=(Token)match(input,74,FOLLOW_74_in_mainClass251);  
            stream_74.add(string_literal10);


            string_literal11=(Token)match(input,67,FOLLOW_67_in_mainClass253);  
            stream_67.add(string_literal11);


            char_literal12=(Token)match(input,42,FOLLOW_42_in_mainClass255);  
            stream_42.add(char_literal12);


            string_literal13=(Token)match(input,56,FOLLOW_56_in_mainClass257);  
            stream_56.add(string_literal13);


            char_literal14=(Token)match(input,58,FOLLOW_58_in_mainClass259);  
            stream_58.add(char_literal14);


            char_literal15=(Token)match(input,59,FOLLOW_59_in_mainClass261);  
            stream_59.add(char_literal15);


            Identifier16=(Token)match(input,Identifier,FOLLOW_Identifier_in_mainClass263);  
            stream_Identifier.add(Identifier16);


            char_literal17=(Token)match(input,43,FOLLOW_43_in_mainClass265);  
            stream_43.add(char_literal17);


            char_literal18=(Token)match(input,76,FOLLOW_76_in_mainClass267);  
            stream_76.add(char_literal18);


            // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:65:99: ( declirationsORStatement )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==Identifier||LA3_0==57||LA3_0==60||(LA3_0 >= 65 && LA3_0 <= 66)||LA3_0==69||(LA3_0 >= 75 && LA3_0 <= 76)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // D:\\college\\CS407\\last\\The_Final_Project_Last\\The_Final_Project_Last\\grammar\\MiniJava.g:65:99: declirationsORStatement
            	    {
            	    pushFollow(FOLLOW_declirationsORStatement_in_mainClass269);
            	    declirationsORStatement19=declirationsORStatement();

            	    state._fsp--;

            	    stream_declirationsORStatement.add(declirationsORStatement19.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

